--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -10,13 +10,13 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    depends_on:
-      - newrelic-infra
+    # depends_on:
+    #   - newrelic-infra
 
-  newrelic-infra:
-    image: newrelic/infrastructure:latest
-    environment:
-      - NRIA_LICENSE_KEY=${NEW_RELIC_LICENSE_KEY}
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  # newrelic-infra:
+  #   image: newrelic/infrastructure:latest
+  #   environment:
+  #     - NRIA_LICENSE_KEY=${NEW_RELIC_LICENSE_KEY}
+  #   volumes:
+  #     - /var/run/docker.sock:/var/run/docker.sock
+  #     - /sys/fs/cgroup:/sys/fs/cgroup:ro
