--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: increments/qiita-cli/actions/publish@v1
+      - uses: Pokeyama/qiita-cli/actions/publish@dev
         with:
           qiita-token: ${{ secrets.QIITA_TOKEN }}
           root: "."
